[package]
name = "storm"
version = "0.8.0"
authors = ["Joe Cumbo <mooman219@gmail.com>"]
description = "A personal 2D game engine designed for performance"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/storm"
homepage = "https://github.com/mooman219/storm"
repository = "https://github.com/mooman219/storm"
keywords = ["game", "engine", "2D", "graphics"]
categories = ["game-engines"]
edition = "2018"
exclude = ["examples/**", "docs/**"]

[badges]
maintenance = { status = "experimental" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", features = ["color"] }
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
]}
wasm-bindgen = { version = "0.2" } 
winit = { version = "0.25", features = [
    "web-sys"
]}
console_error_panic_hook = "0.1.6"
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.27"
winit = "0.25"
cpal = "0.13.4"

[dependencies]
simplelog = "0.11.1"
instant = "0.1.11"
glow = "0.11"
cgmath = "0.18.0"
log = "0.4"
hashbrown = "0.11.2"
fontdue = "0.6.2"
crevice = {version = "0.8.0", features = ["cgmath"]}

# Image format support
png = "0.14"

# Audio format support
claxon = "0.4.3"

[profile.release]
lto = true