[package]
name = "storm"
version = "0.11.0"
authors = ["Joe Cumbo <mooman219@gmail.com>"]
description = "A personal 2D game engine designed for performance"
license = "MIT"
readme = "README.md"
keywords = ["game", "engine", "2D", "graphics"]
categories = ["game-engines"]
edition = "2018"
documentation = "https://docs.rs/storm"
homepage = "https://github.com/mooman219/storm"
repository = "https://github.com/mooman219/storm"
include = ["Cargo.toml", "src/", "storm_macro/", "licenses/", "README.md", "LICENSE"]

[badges]
maintenance = { status = "experimental" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2", features = ["color"] }
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
]}
wasm-bindgen = { version = "0.2" } 
console_error_panic_hook = "0.1.6"
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
cpal = "0.13.4"

[dependencies]
storm_macro = { version = "0.1.0", path = "storm_macro" }
winit = "0.26"
simplelog = "0.11.1"
instant = "0.1.11"
glow = "0.11"
cgmath = "0.18.0"
log = "0.4"
hashbrown = "0.11.2"
fontdue = "0.7.2"
parking_lot = "0.12.1"
profiling = "1.0.5"

# Image format support
png = "0.14"

# Audio format support
claxon = "0.4.3"
